<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detail">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.kailang.wastebook.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_navigation_home_to_addFragment"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.kailang.wastebook.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.kailang.wastebook.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.kailang.wastebook.ui.add.AddFragment"
        android:label="add_fragment"
        tools:layout="@layout/fragment_add" />
</navigation>