<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detail"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.kailang.wastebook.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_navigation_home_to_addFragment"
            app:destination="@id/navigation_add" />
        <action
            android:id="@+id/action_navigation_detail_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.kailang.wastebook.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.kailang.wastebook.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.kailang.wastebook.ui.add.AddFragment"
        android:label="add_fragment"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/editFragment"
        android:name="com.kailang.wastebook.ui.detail.EditFragment"
        android:label="账单详情"
        tools:layout="@layout/fragment_edit" >
        <action
            android:id="@+id/action_editFragment_to_navigation_add"
            app:destination="@id/navigation_add" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.kailang.wastebook.ui.category.CategoryFragment"
        android:label="fragment_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_categoryFragment_to_categoryWasteBookFragment"
            app:destination="@id/categoryWasteBookFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryWasteBookFragment"
        android:name="com.kailang.wastebook.ui.category.CategoryWasteBookFragment"
        android:label="fragment_category_wastebook"
        tools:layout="@layout/fragment_category_wastebook" >
        <action
            android:id="@+id/action_categoryWasteBookFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>
</navigation>