<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.kailang.wastebook.ui.add.AddViewModel" />
        <variable
            name="activity"
            type="android.app.Activity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyHeadInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12" />

            <com.wihaohao.PageGridView
                android:id="@+id/vp_grid_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintVertical_bias="0.1"
                app:numColumns="4"
                app:pageSize="12" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:padding="10dp"
                    android:text="@{vm.type}"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="点击选择" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥"
                    android:textSize="@dimen/app_text_size_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/etAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/padding_normal"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@{vm.amountText}"
                    android:textColor="?android:textColorPrimary"
                    android:textCursorDrawable="@drawable/edit_cursor"
                    android:textSize="@dimen/app_text_size_large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.52"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/imageView_AddFragment_category"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:hint="@string/tally_add_record_note"
                android:maxLines="1"
                android:minHeight="45dp"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:singleLine="true"
                android:text="@{vm.Desc}"
                android:textColor="?android:textColorSecondary"
                android:textSize="@dimen/app_text_size_medium"
                app:layout_constraintEnd_toStartOf="@id/tvDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:minHeight="45dp"
                android:onClick="@{() -> vm.onDateClick(activity)}"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@{vm.dateText}"
                android:textSize="@dimen/app_text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2019年10月24日 15:08" />

            <!-- 键盘 -->
            <TextView
                android:id="@+id/tvNum1"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`1`)}"
                android:text="@string/num_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesc"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum2"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`2`)}"
                android:text="@string/num_2"
                app:layout_constraintStart_toEndOf="@id/tvNum1"
                app:layout_constraintTop_toTopOf="@id/tvNum1"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum3"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`3`)}"
                android:text="@string/num_3"
                app:layout_constraintStart_toEndOf="@id/tvNum2"
                app:layout_constraintTop_toTopOf="@id/tvNum1"
                app:layout_constraintWidth_percent="0.25" />

            <ImageView
                android:id="@+id/ivDelete"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:contentDescription="@string/todo"
                android:gravity="center"
                android:onClick="@{() -> vm.onDeleteClick()}"
                android:scaleType="center"
                android:tint="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvNum3"
                app:layout_constraintTop_toTopOf="@id/tvNum1"
                app:layout_constraintWidth_percent="0.25"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:id="@+id/tvNum4"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginTop="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`4`)}"
                android:text="@string/num_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNum1"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum5"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`5`)}"
                android:text="@string/num_5"
                app:layout_constraintStart_toEndOf="@id/tvNum4"
                app:layout_constraintTop_toTopOf="@id/tvNum4"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum6"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`6`)}"
                android:text="@string/num_6"
                app:layout_constraintStart_toEndOf="@id/tvNum5"
                app:layout_constraintTop_toTopOf="@id/tvNum4"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum7"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`7`)}"
                android:text="@string/num_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNum4"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum8"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`8`)}"
                android:text="@string/num_8"
                app:layout_constraintStart_toEndOf="@id/tvNum7"
                app:layout_constraintTop_toTopOf="@id/tvNum7"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum9"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`9`)}"
                android:text="@string/num_9"
                app:layout_constraintStart_toEndOf="@id/tvNum8"
                app:layout_constraintTop_toTopOf="@id/tvNum7"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvClear"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginTop="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onClearClick()}"
                android:text="@string/num_clean_to_0"
                android:textSize="@dimen/app_text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNum7"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvNum0"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onNumberClick(`0`)}"
                android:text="@string/num_0"
                app:layout_constraintStart_toEndOf="@id/tvClear"
                app:layout_constraintTop_toTopOf="@id/tvClear"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvDot"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/tally_input_item_height"
                android:layout_marginStart="1px"
                android:gravity="center"
                android:onClick="@{() -> vm.onDotClick()}"
                android:text="@string/symbol_dot"
                app:layout_constraintStart_toEndOf="@id/tvNum0"
                app:layout_constraintTop_toTopOf="@id/tvClear"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tvOk"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:height="0dp"
                android:gravity="center"
                android:onClick="@{() -> vm.onEnterClick(activity)}"
                android:text="@string/ok"
                android:textSize="@dimen/app_text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNum6"
                app:layout_constraintTop_toBottomOf="@id/ivDelete" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>